--- a/html/ArticlesPage.html
+++ b/html/ArticlesPage.html
@@ -16,7 +16,7 @@
         <header class="d-flex flex-wrap justify-content-center">
             <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none py-3">
                 <img src="imgs/logo.png" alt="" class="d-inline-block">
-                <span class="fs-4 px-2">DaoAtlas</span>
+                <span class="fs-4 px-2">DAOAtlas</span>
             </a>
             <ul class="nav">
                 <li class="nav-item"><a href="#" class="nav-link link-dark py-4">Home</a></li>
@@ -78,7 +78,7 @@
             <a class="px-3" href=""><img src="imgs/github.png" alt=""></a>
         </div>
         <div class="container copy border-top mt-5 pt-3 d-flex  justify-content-between">
-            <div class="text-muted f12 ">&copy2021 DaoAtlas </div>
+            <div class="text-muted f12 ">&copy2021 DAOAtlas </div>
             <div class="text-muted f12 ">Powered by DAOAtlas Genesis</div>
 
         </div>
