fix pic watermark text

--- a/html/index.html
+++ b/html/index.html
@@ -40,7 +40,7 @@
                         <div class="p-4 news-card-1">
                             <h5 class="card-title">NOV 01</h5>
                             <small>5 min read</small>
-                            <h2 class="mt-4">BanklessDAO a Sample of Future Collaboration.</h2>
+                            <h2 class="mt-4">New Post Today.</h2>
                         </div>
                   
                 </a>
@@ -75,7 +75,7 @@
                         <div class="p-4 news-card-2">
                             <h5 class="card-title">NOV 01</h5>
                             <small>5 min read</small>
-                            <h2 class="mt-4">BanklessDAO a Sample of Future Collaboration.</h2>
+                            <h2 class="mt-4">Hot Post Today.</h2>
                         </div>
                   
                 </a>
